3.10.0/_sources/gallery/mplot3d/wire3d_zero_stride.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/mplot3d/wire3d_zero_stride.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. meta::
        :keywords: codex

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_mplot3d_wire3d_zero_stride.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_mplot3d_wire3d_zero_stride.py:


===================================
3D wireframe plots in one direction
===================================

Demonstrates that setting *rstride* or *cstride* to 0 causes wires to not be
generated in the corresponding direction.

.. GENERATED FROM PYTHON SOURCE LINES 9-31

.. code-block:: Python


    import matplotlib.pyplot as plt

    from mpl_toolkits.mplot3d import axes3d

    fig, (ax1, ax2) = plt.subplots(
        2, 1, figsize=(8, 12), subplot_kw={'projection': '3d'})

    # Get the test data
    X, Y, Z = axes3d.get_test_data(0.05)

    # Give the first plot only wireframes of the type y = c
    ax1.plot_wireframe(X, Y, Z, rstride=10, cstride=0)
    ax1.set_title("Column (x) stride set to 0")

    # Give the second plot only wireframes of the type x = c
    ax2.plot_wireframe(X, Y, Z, rstride=0, cstride=10)
    ax2.set_title("Row (y) stride set to 0")

    plt.tight_layout()
    plt.show()




.. image-sg:: /gallery/mplot3d/images/sphx_glr_wire3d_zero_stride_001.png
   :alt: Column (x) stride set to 0, Row (y) stride set to 0
   :srcset: /gallery/mplot3d/images/sphx_glr_wire3d_zero_stride_001.png, /gallery/mplot3d/images/sphx_glr_wire3d_zero_stride_001_2_00x.png 2.00x
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 32-35

.. tags::
   plot-type: 3D,
   level: intermediate


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 1.440 seconds)


.. _sphx_glr_download_gallery_mplot3d_wire3d_zero_stride.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: wire3d_zero_stride.ipynb <wire3d_zero_stride.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: wire3d_zero_stride.py <wire3d_zero_stride.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: wire3d_zero_stride.zip <wire3d_zero_stride.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
